kubernetes/default/weblate/app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: weblate
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: weblate
  template:
    metadata:
      labels:
        app: weblate
    spec:
      containers:
        - name: weblate
          image: weblate/weblate:latest
          imagePullPolicy: Always
          resources:
            limits:
              memory: "256Mi"
              cpu: "500m"
          ports:
            - containerPort: 8080
              name: http
