kubernetes/default/weblate/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: weblate
  namespace: default
spec:
  selector:
    app: weblate
  ports:
    - port: 8080
      targetPort: 8080
      name: http
