kubernetes/default/weblate/app/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: weblate
  namespace: analytics
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`translate.xetera.dev`)
      priority: 10
      services:
        - name: weblate
          port: 8080
      middlewares:
        - name: ingress-cloudflare-only@kubernetescrd
  tls:
    options:
      name: ingress-cloudflare-mtls@kubernetescrd
    secretName: cloudflare-origin-xetera-dev
